--- a/dev/data/stories.yml
+++ b/dev/data/stories.yml
@@ -23,39 +23,5 @@ stories:
   steps:
   - intent: greet
   - action: utter_greet
-  - intent: mood_great
-  - action: utter_happy
 
-- story: sad path 1
-  steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - intent: affirm
-  - action: utter_happy
-
-- story: sad path 2
-  steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - intent: deny
-  - action: utter_goodbye
-
-#- story: interactive_story_1
-#  steps:
-#  - intent: greet
-#  - action: utter_greet
-#  - intent: bot_challenge
-#  - action: utter_iamabot
-#  - intent: ask_bot_tasks
-#  - action: utter_bot_tasks
-#  - action: utter_did_that_help
-#  - intent: affirm
-#  - action: utter_happy
-#  - intent: goodbye
-#  - action: utter_goodbye
+# trying out all current features
