--- a/dev/domain.yml
+++ b/dev/domain.yml
@@ -1,20 +1,38 @@
 version: '3.1'
 intents:
 - affirm
+- buy_pizza
 - deny
 - faq
 - goodbye
 - greet
 - inform
-- mood_great
-- mood_unhappy
-
+- out_of_scope
+- pizza_order_form
+entities:
+- pizza_type
+- pizza_size
+slots:
+  pizza_size:
+    type: text
+    influence_conversation: true
+    mappings:
+    - type: from_entity
+      entity: pizza_size
+  pizza_type:
+    type: text
+    influence_conversation: true
+    mappings:
+    - type: from_entity
+      entity: pizza_type
+forms:
+  pizza_order_form:
+    required_slots:
+    - pizza_size
+    - pizza_type
 responses:
   utter_greet:
   - text: Welcome to DoughVinci, where art meets appetite. How can I assist you today?
-  utter_cheer_up:
-  - text: 'Here is something to cheer you up:'
-    image: https://i.imgur.com/nGF1K8f.jpg
   utter_did_that_help:
   - text: Did that help you?
   utter_happy:
@@ -28,16 +46,29 @@ responses:
   utter_faq/request_restaurant_location:
   - text: DoughVinci is located in Via dei Solteri 35, in Trento.
   utter_out_of_scope:
-  - text: Sorry, but I can't handle this request. I am a bot for ordering and table bookings in our restaurant DoughVinci. 
+  - text: Sorry, but I can't handle this request. I am a bot for ordering and table bookings in our restaurant DoughVinci.
   - text: Unfortunately I am not created to answer these kind of requests. But I would love to help you with ordering from our restaurant or to book a table there.
+  utter_submit:
+  - text: I will now order a pizza for you!
+  utter_pizza_slots:
+  - text: I will order a {pizza_size} {pizza_type} pizza.
+  utter_ask_continue:
+  - text: Are you sure you want to stop the form?
+  utter_ask_pizza_size:
+  - text: What size would you like your pizza to be?
+  utter_ask_pizza_type:
+  - text: What kind of pizza would you like to buy?
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
-  
 actions:
-- utter_did_that_help
+- utter_out_of_scope
+- utter_greet
+- utter_submit
+- utter_pizza_slots
 - utter_faq
 - utter_goodbye
-- utter_greet
+- utter_did_that_help
 - utter_happy
-- utter_out_of_scope
+- utter_ask_continue
+- validate_pizza_order_form
