--- a/dev/config.yml
+++ b/dev/config.yml
@@ -6,6 +6,7 @@ recipe: default.v1
 # This default value must be replaced with a unique assistant name within your deployment
 assistant_id: 20240119-172005-mean-cookie
 
+### for now using RegexEntityExtractor to only provide at least two annotated examples of the entity: https://rasa.com/docs/rasa/nlu-training-data/#lookup-tables
 # Configuration for Rasa NLU.
 # https://rasa.com/docs/rasa/nlu/components/
 language: en
