add latest basic pizza order changes - include rules for faq and out of scope in pizza form - include more examples for size and type synonyms - added story for ordering by overinformative user - decomment config and add greet as rule so it works - include action to work properly for single order

--- a/dev/data/nlu/nlu_pizza_order.yml
+++ b/dev/data/nlu/nlu_pizza_order.yml
@@ -5,53 +5,53 @@ nlu:
     - i'd like to buy a pizza
     - i want a pizza
     - can i buy a pizza
+    - i want to order pizzas
     - I'm interested in a savory round flattened bread of Italian origin
     - i want to buy a pizza
 - intent: inform
   examples: |    
     - [small](pizza_size)
     - size [s](pizza_size) please
+    - just a [little](pizza_size) one
     - I want a size [m](pizza_size) please
-    - [large](pizza_size)
-    - I want to order [large](pizza_size) pizza
-    - I want a [large](pizza_size) pizza
-    - I think it's [large](pizza_size)
-    - [medium](pizza_size) pizza
-    - [huge](pizza_size) pizza
-    - [Little](pizza_size) pizza
-    - Probably [avg](pizza_size)
-    - [medium](pizza_size)
-    - [large](pizza_size) please
-    - [family](pizza_size)
-    - i'd like a [large](pizza_size) pizza
-    - i want to order a [xl](pizza_size) [vegetariana](pizza_type) pizza
-    - [medium](pizza_size) pizza
-    - [xl](pizza_size)
-    - [small](pizza_size)
-    - [s](pizza_size)
-    - [veggie](pizza_type)
-    - [margherita](pizza_type) pizza
-    - a [Margherita](pizza_type) one
-    - [Prosciutto](pizza_type) pizza
-    - [Pepperoni](pizza_type) pizza
-    - [Vegetarian](pizza_type) pizza pizza
-    - [Funghi](pizza_type)
-    - [Margherita](pizza_type)
-    - [burrata](pizza_type)
-    - [Vegetarian](pizza_type)
-    - give me a [diavola](pizza_type) pizza
-    - a [spicy] pizza for me please
-    - [prosciutto](pizza_type) pizza
     - [smol](pizza_size)
-    - [diavola](pizza_type)
-    - i want a [large](pizza_size) pizza
-    - [burrata](pizza_type)
-    - [margherita](pizza_type) please
+    - [s](pizza_size)  
+    - [medium](pizza_size) pizza
+    - [m](pizza_size)
+    - just normal](pizza_size) size
+    - Probably [avg](pizza_size)
+    - [average](pizza_size) sized pizza
+    - [large](pizza_size)
+    - [large](pizza_size) pls
+    - I want to order size [l](pizza_size) pizza
+    - I want a [big](pizza_size) pizza
+    - I think it's [large](pizza_size)
+    - [huge](pizza_size) pizza
+    - [extra large](pizza_size) please
+    - [family](pizza_size)
+    - i'd like a [family-size](pizza_size) pizza
+    - [xl](pizza_size)
+    - i want a [extra-large](pizza_size) pizza
+    - [margherita](pizza_type) pizza
+    - a [cheese](pizza_type) one
+    - [funghi](pizza_type)
+    - [fungi](pizza_type) pizza please
+    - [champignon](pizza_type)
+    - [mushroom](pizza_type)
+    - [prosciutto](pizza_type) pizza
+    - want to order least [ham](pizza_type) pizza
+    - [veggie](pizza_type)
+    - [vegetarian](pizza_type) pizza
+    - pizza [vegetariana](pizza_type)
+    - a [vegetables](pizza_type) pizza please
+    - [pepperoni](pizza_type) pizza
+    - [spicy](pizza_type)
+    - a [spicy](pizza_type) pizza for me please
+    - give me a [diavola](pizza_type) pizza
+    - [pepp](pizza_type)
+    - i want to order a [xl](pizza_size) [vegetariana](pizza_type) pizza
     - I want a [medium](pizza_size) [cheese](pizza_type) pizza
     - I like [small](pizza_size) [fungi](pizza_type) pizza
     - [pepperoni](pizza_type) [small](pizza_size) pizza
     - want to oder [large](pizza_size) [cheese](pizza_type) pizza
     - want to order [medium](pizza_size) [pepp](pizza_type) pizza
-    - want to order least [ham](pizza_type) pizza
-
-#TODO: test all pizza types and sizes for synonyms
