--- a/dev/data/stories.yml
+++ b/dev/data/stories.yml
@@ -1,109 +1,8 @@
 version: "3.1"
 
 stories:
-#TODO: maybe better to let bot start talking, not user?
-#- story: ask chatbot happy path
-#  steps:
-#  - intent: greet
-#  - action: utter_greet
-#  - intent: bot_challenge
-#  - action: utter_iamabot
-#  - intent: ask_bot_tasks
-#  - action: utter_bot_tasks
-#  - action: utter_did_that_help
-#  - intent: affirm
-#  - action: utter_happy
-#
 
-
-
-#TODO all stories from pizza bot should be somehow included here
-# trying out all current features
-- story: interactive_story_1
-  steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: buy_pizza
-  - action: pizza_order_form
-  - active_loop: pizza_order_form
-  - slot_was_set:
-    - requested_slot: pizza_size
-  - intent: inform
-    entities:
-    - pizza_size: small
-  - slot_was_set:
-    - pizza_size: small
-  - action: pizza_order_form
-  - slot_was_set:
-    - pizza_size: small
-  - slot_was_set:
-    - requested_slot: pizza_type
-  - intent: inform
-    entities:
-    - pizza_type: Vegetariana
-  - slot_was_set:
-    - pizza_type: Vegetariana
-  - action: pizza_order_form
-  - slot_was_set:
-    - pizza_type: Vegetariana
-  - slot_was_set:
-    - requested_slot: null
-  - active_loop: null
-  - action: utter_submit
-  - action: utter_pizza_slots
-  - intent: goodbye
-  - action: utter_goodbye
-
-- story: interactive_story_1
-  steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: buy_pizza
-  - action: pizza_order_form
-  - active_loop: pizza_order_form
-  - slot_was_set:
-    - requested_slot: pizza_size
-  - intent: faq
-  - action: utter_faq
-  - action: pizza_order_form
-  - slot_was_set:
-    - requested_slot: pizza_size
-  - intent: inform
-    entities:
-    - pizza_size: large
-  - slot_was_set:
-    - pizza_size: large
-  - action: pizza_order_form
-  - slot_was_set:
-    - pizza_size: large
-  - slot_was_set:
-    - requested_slot: pizza_type
-  - intent: inform
-    entities:
-    - pizza_type: vegggie
-  - slot_was_set:
-    - pizza_type: vegggie
-  - action: pizza_order_form
-  - slot_was_set:
-    - pizza_type: null
-  - slot_was_set:
-    - requested_slot: pizza_type
-  - intent: inform
-    entities:
-    - pizza_type: Vegetariana
-  - slot_was_set:
-    - pizza_type: Vegetariana
-  - action: pizza_order_form
-  - slot_was_set:
-    - pizza_type: Vegetariana
-  - slot_was_set:
-    - requested_slot: null
-  - active_loop: null
-  - action: utter_submit
-  - action: utter_pizza_slots
-  - intent: goodbye
-  - action: utter_goodbye
-
+# order overinformative user
 - story: interactive_story_1
   steps:
   - intent: greet
