--- a/dev/config.yml
+++ b/dev/config.yml
@@ -4,7 +4,7 @@ recipe: default.v1
 
 # The assistant project unique identifier
 # This default value must be replaced with a unique assistant name within your deployment
-assistant_id: 20240119-172005-mean-cookie
+assistant_id: dough_vinci
 
 #TODO: think of custom slot mapping with FormValidationAction https://rasa.com/docs/rasa/forms/#custom-slot-mappings
 ### for now using RegexEntityExtractor to only provide at least two annotated examples of the entity: https://rasa.com/docs/rasa/nlu-training-data/#lookup-tables
