--- a/dev/data/nlu/nlu_pizza_order.yml
+++ b/dev/data/nlu/nlu_pizza_order.yml
@@ -8,7 +8,7 @@ nlu:
     - i want to order pizzas
     - I'm interested in a savory round flattened bread of Italian origin
     - i want to buy a pizza
-- intent: inform
+- intent: inform_pizza_order
   examples: |    
     - [small](pizza_size)
     - size [s](pizza_size) please
@@ -19,6 +19,7 @@ nlu:
     - [medium](pizza_size) pizza
     - [m](pizza_size)
     - just normal](pizza_size) size
+    - [standard] size
     - Probably [avg](pizza_size)
     - [average](pizza_size) sized pizza
     - [large](pizza_size)
@@ -55,3 +56,10 @@ nlu:
     - [pepperoni](pizza_type) [small](pizza_size) pizza
     - want to oder [large](pizza_size) [cheese](pizza_type) pizza
     - want to order [medium](pizza_size) [pepp](pizza_type) pizza
+    - QWERT [small]{"entity": "pizza_size", "group": "1"} [funghi]{"entity": "pizza_type", "group": "1"}
+###    - Give me a [small]{"entity": "pizza_size", "group": "1"} [margherita]{"entity": "pizza_type", "group": "1"} and a [large]{"entity": "pizza_size", "group": "2"} [pepperoni]{"entity": "pizza_type", "group": "2"} one
+###    - Can I get a size [m]{"entity": "pizza_size", "group": "1"} [funghi]{"entity": "pizza_type", "group": "1"} and a [family-size]{"entity": "pizza_size", "group": "2"} [prosciutto]{"entity": "pizza_type", "group": "2"}
+###    - I'd like a [big]{"entity": "pizza_size", "group": "1"} sized [veggie]{"entity": "pizza_type", "group": "1"} and a [large]{"entity": "pizza_size", "group": "2"} [diavola]{"entity": "pizza_type", "group": "2"} pizza please
+###    - For the first order, give me a [huge]{"entity": "pizza_size", "group": "1"} [vegetariana]{"entity": "pizza_type", "group": "1"}. Then, for the second order, a [medium]{"entity": "pizza_size", "group": "2"} [prosciutto]{"entity": "pizza_type", "group": "2"} and finally, a [family-size]{"entity": "pizza_size", "group": "3"} [margherita]{"entity": "pizza_type", "group": "3"}
+###    - I'd like a [small]{"entity": "pizza_size", "group": "1"} [funghi]{"entity": "pizza_type", "group": "1"}, a [large]{"entity": "pizza_size", "group": "2"} [pepperoni]{"entity": "pizza_type", "group": "2"}, and a [medium]{"entity": "pizza_size", "group": "3"} [diavola]{"entity": "pizza_type", "group": "3"}
+### I'd like a small funghi, a large pepperoni and a medium diavola
