--- a/dev/data/rules/rules_pizza_order.yml
+++ b/dev/data/rules/rules_pizza_order.yml
@@ -7,6 +7,32 @@ rules:
   - intent: buy_pizza
   - action: pizza_order_form
   - active_loop: pizza_order_form
+  - slot_was_set:
+    - requested_slot: pizza_type
+  - slot_was_set:
+    - requested_slot: pizza_size
+
+- rule: Activate Pizza Form part 2
+  steps: 
+  - intent: inform_pizza_order
+  - action: pizza_order_form
+  - active_loop: pizza_order_form
+  - slot_was_set:
+    - requested_slot: pizza_type
+  - slot_was_set:
+    - requested_slot: pizza_size
+
+# - rule: Submit Pizza Form
+#   condition:
+#   - active_loop: pizza_order_form
+#   steps:
+#   - action: pizza_order_form
+#   - active_loop: null
+#   - slot_was_set:
+#     - requested_slot: null
+#   - action: utter_submit
+#   - action: utter_pizza_slots
+
 
 - rule: Submit Pizza Form
   condition:
@@ -16,8 +42,12 @@ rules:
   - active_loop: null
   - slot_was_set:
     - requested_slot: null
-  - action: utter_submit
-  - action: utter_pizza_slots
+  - action: action_total_order_add
+  - action: utter_anything_else
+  # - intent: deny
+  # - action: utter_all_set
+  #- action: utter_submit
+  #- action: utter_pizza_slots
 
   #### continues the form after bot challange
 - rule: Interruption in Pizza Form
